--- a/index.html
+++ b/index.html
@@ -11,9 +11,16 @@
 
 <script src=scenes/scene1.js></script>
 <script src=scenes/scene2.js></script>
+<script src=scenes/scene3.js></script>
+<script src=scenes/scene4.js></script>
+<script src=scenes/scene5.js></script>
+<script src=scenes/scene6.js></script>
+<script src=scenes/scene7.js></script>
+<script src=scenes/scene8.js></script>
+<script src=scenes/scene9.js></script>
 
 <canvas id=canvas2D style="position:absolute;top:0;left:0;"></canvas>
-<canvas id=canvas3D style="position:absolute;top:470;left:-2000;" width=500 height=500></canvas>
+<canvas id=canvas3D style="position:absolute;top:440;left:-2000;" width=500 height=500></canvas>
 <script>
 
 let codeArea = new CodeArea(-2000, 20), scene;
@@ -25,7 +32,7 @@ let setScene = id => {
    codeArea.getElement().value = scene.fragmentShader;
 }
 
-setScene('1');
+setScene('3');
 
 let pen = new Pen();
 let chalktalk = new Chalktalk();
@@ -117,11 +124,16 @@ let keyUp = key => {
    case 'T' : webcam.opacity = 1.01 - webcam.opacity; break;
    case 'u' : webcam.ufoTime = webcam.ufoTime ? 0 : Date.now() / 1000; break;
    case 'v' : webcam.isTrackHead = ! webcam.isTrackHead; break;
+   case 'V' : webcam.showTrackHead = ! webcam.showTrackHead; break;
    case 'w' : webcam.isWorld = ! webcam.isWorld; break;
    }
 }
 
 animate = () => {
+   let scrollPosition = window.pageYOffset;
+   document.body.style.overflow = 'hidden';
+   window.scrollTo(0, scrollPosition);
+
    let p = webcam.update();
    codeArea.update();
    ctx.drawImage(webcam.canvas, 0,0,640,440, 0,0,w,h);
